<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/high_scores"
        android:enabled="true"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:title="@string/high_scores"
        android:visible="true">
    </item>
    <item
        android:id="@+id/credits"
        android:enabled="true"
        android:orderInCategory="4"
        android:showAsAction="ifRoom"
        android:title="@string/credits"
        android:visible="true">
    </item>
    <item
        android:id="@+id/help"
        android:enabled="true"
        android:showAsAction="always"
        android:title="@string/help"
        android:visible="true">
    </item>

</menu>